<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Income">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="@color/income"
        android:text="@string/add_income_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black_semi_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/income_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/income_date" />

    <EditText
        android:id="@+id/income_date"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_income_date"
        android:inputType="date"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="16dp"
        android:background="@color/income"
        android:onClick="submit_income"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/income_status"
        android:layout_width="426dp"
        android:layout_height="286dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/income_user" />

    <Spinner
        android:id="@+id/income_user"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/income_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/income_type" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/income_source"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:hint="@string/add_income_source"
            android:inputType="text"
            android:singleLine="true"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/income_amount"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:hint="@string/add_income_amount"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>