<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Purchase">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="@color/purchase"
        android:text="@string/add_purchase_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black_semi_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/purchase_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchase_date" />


    <EditText
        android:id="@+id/purchase_date"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/add_purchase_date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <TextView
        android:id="@+id/purchase_status"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchase_user"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/purchase_user"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:entries="@array/users"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/purchase_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchase_type" />


    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="16dp"
        android:background="@color/wizardgreen"
        android:onClick="submit_purchase"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/purchase_source"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:hint="@string/add_purchase_source"
            android:inputType="text"
            android:singleLine="true"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/purchase_description"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:hint="@string/add_purchase_description"
            android:inputType="text"
            android:singleLine="true"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/purchase_amount"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:hint="@string/add_purchase_amount"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>