<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Expense">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="@color/expense"
        android:text="@string/add_expense_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black_semi_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/expense_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_date" />

    <Spinner
        android:id="@+id/expense_repeating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/repeating"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_type" />

    <EditText
        android:id="@+id/expense_date"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_Expense_date"
        android:inputType="date"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/expense_status"
        android:layout_width="384dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_user"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/expense_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="120dp"
        android:entries="@array/users"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/expense_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_repeating" />


    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="16dp"
        android:background="@color/expense"
        android:onClick="submit_expense"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/expense_source"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:hint="@string/add_expense_source"
            android:inputType="text"
            android:singleLine="true"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"  />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/expense_amount"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:hint="@string/add_Expense_amount"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"/>

</androidx.constraintlayout.widget.ConstraintLayout>